--- a/module-9/About/css/about.css
+++ b/module-9/About/css/about.css
@@ -2,3 +2,9 @@ body {
   font-family: "Pathway Gothic One", sans-serif;
   background: url("../img/background.jpg") no-repeat;
 }
+
+.wrapper {
+  min-width: 320px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
