--- a/module-8(checked)/css/gallery.css
+++ b/module-8(checked)/css/gallery.css
@@ -145,7 +145,7 @@ h2 {
 }
 
 .gallery-item:hover {
-  cursor: pointer;
+  cursor: zoom-in;
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-image: url("../img/zoom-in.svg");
