--- a/module-10/css/main.css
+++ b/module-10/css/main.css
@@ -24,8 +24,6 @@
     width: 33%;
     text-align: center;
     margin-bottom: 20px; }
-    .header__nav-menu-item .header__submenu-wrapper {
-      position: relative; }
   .header__nav-menu-link {
     color: #fff;
     font-size: 22px;
@@ -61,38 +59,39 @@
             user-select: none; }
     .header__page-heading:hover {
       cursor: default; }
-  .header__submenu {
-    display: none;
-    top: 25px;
-    left: -1px;
-    padding: 2px 3px;
-    background: #fff;
-    z-index: 10;
-    position: absolute;
-    border-radius: 3px;
-    border: 1px solid #fff; }
-    .header__submenu::before {
-      content: "";
-      top: -5px;
-      left: 18px;
-      position: absolute;
-      border-style: solid;
-      border-width: 0 4px 6px 4px;
-      border-color: transparent transparent #fff transparent; }
-  .header__submenu-link {
-    color: #6b7488;
-    -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none; }
-    .header__submenu-link:hover {
-      color: #263555; }
-  .header__submenu-wrapper {
+  .header .submenu-wrapper {
+    position: relative;
     display: inline-block; }
-    .header__submenu-wrapper:hover .header__submenu {
+    .header .submenu-wrapper:hover .submenu {
       display: block; }
-    .header__submenu-wrapper:hover .header__nav-menu-link {
+    .header .submenu-wrapper:hover .header__nav-menu-link {
       color: #263555; }
+    .header .submenu-wrapper .submenu {
+      display: none;
+      top: 25px;
+      left: -1px;
+      padding: 2px 3px;
+      background: #fff;
+      z-index: 10;
+      position: absolute;
+      border-radius: 3px;
+      border: 1px solid #fff; }
+      .header .submenu-wrapper .submenu::before {
+        content: "";
+        top: -5px;
+        left: 18px;
+        position: absolute;
+        border-style: solid;
+        border-width: 0 4px 6px 4px;
+        border-color: transparent transparent #fff transparent; }
+      .header .submenu-wrapper .submenu__nav-link {
+        color: #6b7488;
+        -webkit-user-select: none;
+           -moz-user-select: none;
+            -ms-user-select: none;
+                user-select: none; }
+        .header .submenu-wrapper .submenu__nav-link:hover {
+          color: #263555; }
 
 @media screen and (min-width: 768px) {
   .header {
@@ -106,13 +105,12 @@
       height: 130px;
       line-height: 130px;
       font-size: 60px; }
-    .header__submenu {
-      top: 30px;
-      left: 0px; }
-      .header__submenu::before {
+    .header .submenu-wrapper .submenu {
+      top: 30px; }
+      .header .submenu-wrapper .submenu::before {
         left: 20px; }
-    .header__submenu-link {
-      font-size: 18px; } }
+      .header .submenu-wrapper .submenu__nav-link {
+        font-size: 18px; } }
 
 @media screen and (min-width: 992px) {
   .header__nav-menu {
@@ -137,13 +135,12 @@
     height: 150px;
     line-height: 150px;
     font-size: 70px; }
-  .header__submenu {
-    top: 32px;
-    left: -1px; }
-    .header__submenu::before {
+  .header .submenu-wrapper .submenu {
+    top: 32px; }
+    .header .submenu-wrapper .submenu::before {
       left: 22px; }
-  .header__submenu-link {
-    font-size: 20px; } }
+    .header .submenu-wrapper .submenu__nav-link {
+      font-size: 20px; } }
 
 .main {
   margin: 0 auto;
